<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LAC Life</string>
    <string name="action_settings">Settings</string>

    <!-- Activity -->
    <string name="activity_home">Welcome</string>
    <string name="activity_login">Login</string>
    <string name="activity_products">Products</string>
    <string name="activity_register">Register</string>
    <string name="activity_contacts">Contacts</string>
    <string name="activity_review_details">Review Details</string>
    <string name="activity_enter_details">Enter Details</string>
    <string name="activity_your_details">Your Details</string>
    <string name="activity_requirements">Requirements</string>

    <!-- Title -->
    <string name="title_">Title</string>
    <string name="title_forgotten_passcode">Forgotten Passcode</string>
    <string name="title_leadway_life">LeadwayLIFE</string>
    <string name="title_code_sent">Code Sent!</string>
    <string name="title_quote_sent">Quote Sent!</string>
    <string name="title_select_gender">Select Gender</string>
    <string name="title_product">Product</string>
    <string name="title_product_quote">Product Quote</string>
    <string name="title_mobile_number">Mobile number</string>
    <string name="title_policy_number">Policy number</string>
    <string name="title_email_address">Email address</string>
    <string name="title_life_term_insurance">Life term insurance</string>
    <string name="title_critical_illness">Critical illness</string>
    <string name="title_total_permanent_disablement">Total &amp; permanent disablement</string>
    <string name="title_your_mobile_number">Your Mobile Number</string>
    <string name="title_your_personal_details">Your Personal Details</string>
    <string name="title_please_confirm_that_the_details_are_correct">Please confirm that the details are correct</string>
    <string name="title_please_enter_in_5_digit_passcode_to_login">Please enter in 5 digit Passcode to Login</string>
    <string name="title_please_enter_your">Please enter your</string>
    <string name="title_5_digit_passcode">5-digit passcode</string>
    <string name="title_to_login">to login</string>

    <!-- Button Label -->
    <string name="btn_login">LOGIN</string>
    <string name="btn_products">PRODUCTS</string>
    <string name="btn_contact">CONTACT</string>
    <string name="btn_about_app">ABOUT APP</string>
    <string name="btn_get_a_quote">Get a quote</string>
    <string name="btn_get_quote">Get quote</string>
    <string name="btn_mail_us">Mail us</string>
    <string name="btn_next">Next</string>
    <string name="btn_resend_code">Resend code</string>
    <string name="btn_email_this_quote">Email this Quote</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_select_gender">Select Gender</string>
    <string name="btn_get_started">Get Started</string>
    <string name="btn_submit_details">Submit Details</string>
    <string name="btn_begin">Begin</string>

    <!-- Hint -->
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_phone_">Phone #</string>
    <string name="hint_email">Email</string>
    <string name="hint_date_of_birth">Date of birth</string>
    <string name="hint_desired_savings">Enter the desired yearly savings</string>
    <string name="hint_enter_the_verification_code">Enter verification code</string>
    <string name="hint_sum_insured">Sum insured</string>
    <string name="hint_mobile_phone_number">Mobile Phone Number</string>
    <string name="hint_confirm_mobile_phone_number">Confirm Mobile Phone Number</string>
    <string name="hint_your_account">Your Account</string>
    <string name="hint_policy_number">Policy Number</string>
    <string name="hint_email_address">Email Address</string>

    <!-- Text Label -->
    <string name="txt_male">Male</string>
    <string name="txt_female">Female</string>
    <string name="txt_payment_frequency">Payment frequency</string>
    <string name="txt_cover_period">Cover period</string>
    <string name="txt_desired_savings">Desired yearly savings</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_sum_insured">Sum insured</string>
    <string name="txt_mandatory">Mandatory</string>
    <string name="txt_optional">Optional</string>
    <string name="txt_click_here_to_view_our_full_terms_conditions">Click here to view our full Terms &amp; Conditions</string>
    <string name="txt_tick_this_box_to_accept_">Tick this box to accept the Terms &amp; Conditions and proceed</string>

    <!-- Alert -->
    <string name="alert_code_sent">A verification code has been sent to your phone. Please enter code on the next screen</string>
    <string name="alert_quote_sent">A copy of this quote has been sent to your email address</string>
    <string name="alert_please_wait">Please wait....</string>

    <!-- Description -->
    <string name="dscr_accidental_total_permanent_disability">Accidental Total &amp; Permanent Disability</string>
    <string name="des_your_contact_details">Your contact details</string>
    <string name="des_tell_us_how_">Tell us how much you wish to save</string>
    <string name="des_add_risk_to_">Add a risk to your plan</string>
    <string name="des_verify_number_">Please verify your number</string>
    <string name="des_your_quote">Your quote</string>
    <string name="des_enter_the_code_">Enter the code sent to your phone in the field below to get the quote</string>
    <string name="des_leadway_life">Leadway Life</string>
    <string name="des_product_description">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
    <string name="des_final_quote">Most of the features in the app will rely on API calls to
Leadway’s platform using XML which Leadway will provide.
Illustrations used in this document are wireframes and not the final designs.</string>
    <string name="des_manage_your_life_policies_">Manage your Life policies on the go using Leadway LIFE. A free and secure service from Leadway Assurance Compnay</string>
    <string name="des_to_get_started_you_will_">To get started you will need the following</string>
    <string name="descri_this_will_be_used_">This will be used to link your number to your account</string>
    <string name="descri_to_verify_your_account_">To verify your account with Leadway, you will need to have the policy number of any existing life product you\'re subscribed to</string>
    <string name="descri_you_will_need_to_provide_">You will need to provide the email address we have on file for any life policy you have with Leadway</string>
    <string name="descri_for_this_step_you_will_">For this step you will need the policy number for any life product you currently have with leadway Assurance</string>
    <string name="descri_for_your_security_we_need_">For your security, we need to confirm your personal information</string>
    <string name="descri_provides_a_chosen_cash_amount_">Provides a chosen cash amount to your loved ones when you are no longer here</string>
    <string name="descri_provides_you_with_a_chosen_cash_">Provides you with a chosen cash amount if you are diagnosed with a specific sickness or injury</string>
    <string name="descri_provides_you_with_a_chosen_cash_amount_">Provides you with a chosen cash amount if you can not return to work due to temporary or permanent injury</string>
    <string name="descri_enter_the_mobile_number_">Enter the mobile number you&amp;apos;d like to link to Leadway LIFE Mobile</string>
    <string name="descri_enter_your_email_address_and_a_policy_">Enter your email address and a policy number from one of your life policies</string>
    <string name="descri_please_enter_your_full_">Please enter your full name and date of birth</string>
    <string name="dscr_esp_risk_description_1">This plan comes with a standard Nim Death Cover. You may choose to increase this to a higher amount.</string>
    <string name="dscr_esp_risk_description_2">You may purchase additional Critical illness cover (Amount limited to the Death Sum Assured)</string>
    <string name="dscr_esp_risk_description_3">You may purchase additional TPD cover (Amount limited to the Death Sum Assured)</string>
    <string name="dscr_etp_risk_description_1">This policy pays the maturity amount in the event of death. We can extend the cover to pay the Maturity amount earlier if you are Critically ill. State here if you want to extend this cover.</string>
    <string name="dscr_etp_risk_description_2">As in the Critical illness cover, state here if you want cover against Total &amp;amp; Permanent Disability following an Accident and Maturity amount paid earlier in such event.</string>
    <string name="dscr_psp_risk_description_1">Our death cover on this policy is half of the savings balance subject to a maximum of Nimillion. Do you wish to purchase a higher cover?</string>
    <string name="dscr_psp_risk_description_2">Provides you with a chosen cash amount if you cannot return to work due to accidental Total &amp;amp; Permanent injury.</string>

    <!-- Menu -->
    <string name="menu_direct_debit">Direct Debit</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_faqs">FAQs</string>
    <string name="menu_products">Products</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_terms_conditions">Terms &amp; Conditions</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_my_policies">My Policies</string>
    <string name="menu_logout">Logout</string>

</resources>