<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BaseLayout"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        style="@style/HeaderText"
        android:text="@string/title_your_personal_details" />

    <TextView
        style="@style/SimpleTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/descri_please_enter_your_full_" />

    <EditText
        android:id="@+id/edtTitle"
        style="@style/SimpleTextColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/title_"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edtFName"
        style="@style/SimpleTextColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/hint_first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtLName"
        style="@style/SimpleTextColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/hint_last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtBirthday"
        style="@style/SimpleTextColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/hint_date_of_birth"
        android:inputType="date" />

    <Button
        android:id="@+id/btnContinue"
        style="@style/DefaultYellowButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/btn_continue" />

</LinearLayout>