<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BaseLayout"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/des_verify_number_"
        android:textColor="@color/title_primary_color"
        android:textSize="@dimen/title_text_size" />

    <TextView
        android:id="@+id/txtDescription"
        style="@style/SimpleTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/des_enter_the_code_" />

    <EditText
        android:id="@+id/editText1"
        style="@style/SimpleTextColor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_enter_the_verification_code"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnGetQuote"
        style="@style/DefaultYellowButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/btn_get_quote" />

    <Button
        android:id="@+id/btnResendCode"
        style="@style/DefaultYellowButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/btn_resend_code" />

</LinearLayout>