<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BaseLayout"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        style="@style/HeaderText"
        android:layout_marginBottom="6dp"
        android:text="@string/des_tell_us_how_" />

    <TextView
        style="@style/SimpleTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="3dp"
        android:layout_marginTop="10dp"
        android:text="State the amount you wish to be paid at maturity of this policy, or at death if earlier." />

    <EditText
        android:id="@+id/edtSavings"
        style="@style/SimpleTextColor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_desired_savings"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        style="@style/SimpleTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="3dp"
        android:layout_marginTop="10dp"
        android:text="How long do you want this cover for (minimum is 5 years)?" />

    <Spinner
        android:id="@+id/spnCoverPeriod"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_spinner"
        android:prompt="@string/txt_cover_period" />

    <TextView
        style="@style/SimpleTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="3dp"
        android:layout_marginTop="10dp"
        android:text="How frequently you wish to pay your premiums?" />

    <Spinner
        android:id="@+id/spnPayFrequency"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_spinner"
        android:prompt="@string/txt_payment_frequency" />

    <Button
        android:id="@+id/btnNext"
        style="@style/DefaultYellowButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/btn_next" />

</LinearLayout>