<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BaseLayout"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/des_leadway_life"
        android:textColor="@color/title_primary_color"
        android:textSize="@dimen/title_text_size" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtDescription"
                style="@style/SimpleTextColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/des_product_description" />

            <Button
                android:id="@+id/btnGetQuote"
                style="@style/DefaultYellowButton"
                android:layout_marginTop="20dp"
                android:text="@string/btn_get_quote" />

            <Button
                android:id="@+id/btnMailUs"
                style="@style/DefaultYellowButton"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/btn_mail_us" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>