<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BaseLayout"
    android:orientation="vertical"
    android:padding="10dp" >

    <include layout="@layout/layout_title" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/edtFName"
                style="@style/SimpleTextColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/edtLName"
                style="@style/SimpleTextColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/edtPhone"
                style="@style/SimpleTextColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/hint_phone_"
                android:inputType="phone" />

            <EditText
                android:id="@+id/edtEmail"
                style="@style/SimpleTextColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edtBirthday"
                style="@style/SimpleTextColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_date_of_birth"
                android:inputType="date" />

            <TextView
                android:id="@+id/btnGender"
                style="@style/SimpleTextColor"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_corner_white_button"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/btn_select_gender" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="fill_parent"
                android:layout_height="44dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corner_white_button"
                android:text="@string/btn_next" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>