<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BaseLayout"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/txtDescription"
        style="@style/SimpleTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/des_tell_us_how" />

    <TextView
        style="@style/SimpleTextColor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="6dp"
        android:text="@string/txt_desired_savings" />

    <EditText
        android:id="@+id/editText1"
        style="@style/SimpleTextColor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        style="@style/SimpleTextColor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="6dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_cover_period" />

    <Spinner
        android:id="@+id/spnCover"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/SimpleTextColor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="6dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_payment_frequency" />

    <Spinner
        android:id="@+id/spnPayment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/btn_next" />

</LinearLayout>